--- a/config/application.production.json
+++ b/config/application.production.json
@@ -3,5 +3,6 @@
   "collectionName": "users",
   "mongoDBHost": "localhost",
   "mongoDBPort": 27017,
-  "mongoDBName": "fm"
+  "mongoDBName": "fm",
+  "domain": "https://users.frontender.info/"
 }
