--- a/.eslintrc
+++ b/.eslintrc
@@ -23,6 +23,7 @@
   "rules": {
     "import/no-unresolved": 0,
     "import/no-extraneous-dependencies": 0,
-    "import/no-dynamic-require": 0
+    "import/no-dynamic-require": 0,
+    "no-underscore-dangle": ["error", {"allow": ["_id"]}]
   }
 }
