--- a/config/application.local.json
+++ b/config/application.local.json
@@ -3,5 +3,6 @@
   "collectionName": "users",
   "mongoDBHost": "localhost",
   "mongoDBPort": 27017,
-  "mongoDBName": "fm"
+  "mongoDBName": "fm",
+  "domain": "http://localhost:3040/"
 }
