ISSUE-1 - add linter

--- a/.eslintrc
+++ b/.eslintrc
@@ -1,29 +1,21 @@
 {
+  "extends": ["airbnb", "prettier"],
   "parser": "babel-eslint",
-  "extends": "airbnb",
   "plugins": [
     "react",
     "jsx-a11y",
-    "import"
+    "import",
+    "jest"
   ],
   "env": {
     "browser": true,
     "node": true,
     "jest": true,
-    "es6": true,
+    "worker": true,
+    "serviceworker": true,
+    "es6": true
   },
-  "settings" : {
-    "import/core-modules": "config.js",
-    "import/resolver": {
-      "webpack": {
-        "config": "./webpack.config.js"
-      }
-    }
-  },
-  "rules": {
-    "import/no-unresolved": 0,
-    "import/no-extraneous-dependencies": 0,
-    "import/no-dynamic-require": 0,
-    "no-underscore-dangle": ["error", {"allow": ["_id"]}]
+  rules: {
+    "no-underscore-dangle": ["error", { "allow": ["_id"] }]
   }
 }
