--- a/.babelrc
+++ b/.babelrc
@@ -5,9 +5,6 @@
         "browsers": ["last 2 versions", "IE >= 11"]
       }
     }],
-    "stage-0",
-    "stage-1",
-    "stage-2",
-    "stage-3",
+    "stage-0"
   ],
 }
