--- a/package.json
+++ b/package.json
@@ -13,39 +13,6 @@
   ],
   "license": "CC-BY-4.0",
   "main": "server.js",
-  "dependencies": {
-    "@plasma-platform/tm-message-hook": "^1.0.1",
-    "babel-cli": "^6.26.0",
-    "babel-core": "^6.26.0",
-    "babel-eslint": "^8.0.1",
-    "babel-polyfill": "^6.26.0",
-    "babel-preset-env": "^1.6.0",
-    "babel-preset-stage-0": "^6.24.1",
-    "babel-preset-stage-1": "^6.24.1",
-    "babel-preset-stage-2": "^6.24.1",
-    "babel-preset-stage-3": "^6.24.1",
-    "dotenv": "^4.0.0",
-    "eslint": "^4.9.0",
-    "eslint-config-airbnb": "^16.0.0",
-    "eslint-config-prettier": "^2.6.0",
-    "eslint-plugin-import": "^2.7.0",
-    "eslint-plugin-jest": "^21.2.0",
-    "eslint-plugin-jsx-a11y": "^6.0.2",
-    "eslint-plugin-react": "^7.4.0",
-    "file-exists": "^4.0.0",
-    "fs": "0.0.1-security",
-    "joi": "^10.6.0",
-    "lint-staged": "^4.2.3",
-    "mongodb": "^2.2.31",
-    "mongoose": "^4.11.7",
-    "npm-run-all": "^4.1.1",
-    "prettier": "^1.7.4",
-    "restify": "^4.0.2",
-    "restify-cookies": "^0.2.2",
-    "restify-joi-middleware": "^3.0.0",
-    "restify-jwt": "^0.4.0",
-    "restify-mongoose": "^2.0.1"
-  },
   "scripts": {
     "lint": "npm run format && npm-run-all lint:*",
     "lint:js": "eslint ./source/** --ext .js --color -f stylish --fix",
@@ -78,5 +45,35 @@
       "text",
       "html"
     ]
+  },
+  "devDependencies": {
+    "@babel/cli": "^7.2.3",
+    "@babel/core": "^7.3.3",
+    "@babel/plugin-proposal-export-namespace-from": "^7.2.0",
+    "@babel/plugin-syntax-export-default-from": "^7.2.0",
+    "@babel/plugin-transform-runtime": "^7.2.0",
+    "@babel/preset-env": "^7.3.1",
+    "@plasma-platform/tm-message-hook": "^2.0.12",
+    "eslint": "^5.14.0",
+    "eslint-config-airbnb": "^17.1.0",
+    "eslint-config-prettier": "^4.0.0",
+    "eslint-plugin-import": "^2.16.0",
+    "eslint-plugin-jest": "^22.3.0",
+    "eslint-plugin-jsx-a11y": "^6.2.1",
+    "eslint-plugin-react": "^7.12.4",
+    "lint-staged": "^8.1.4",
+    "prettier": "^1.16.4"
+  },
+  "dependencies": {
+    "dotenv-safe": "^6.1.0",
+    "fs": "0.0.2",
+    "joi": "^14.3.1",
+    "mongoose": "^5.4.13",
+    "npm-run-all": "^4.1.5",
+    "restify": "^7.7.0",
+    "restify-cookies": "^0.2.5",
+    "restify-errors": "^6.1.1",
+    "restify-joi-middleware": "^5.0.1",
+    "restify-jwt-community": "^1.0.9"
   }
 }
