--- a/package.json
+++ b/package.json
@@ -46,14 +46,34 @@
     ]
   },
   "dependencies": {
-    "dotenv": "^6.2.0",
+    "@babel/cli": "^7.2.3",
+    "@babel/core": "^7.4.0",
+    "@babel/plugin-proposal-export-namespace-from": "^7.2.0",
+    "@babel/plugin-syntax-dynamic-import": "^7.2.0",
+    "@babel/plugin-syntax-export-default-from": "^7.2.0",
+    "@babel/plugin-transform-runtime": "^7.4.0",
+    "@babel/preset-env": "^7.4.2",
+    "@babel/runtime": "^7.4.2",
+    "@plasma-platform/tm-message-hook": "^2.0.14",
+    "babel-eslint": "^10.0.1",
+    "documentation": "^9.3.1",
+    "dotenv": "^7.0.0",
+    "eslint": "^5.16.0",
+    "eslint-config-airbnb": "^17.1.0",
+    "eslint-config-prettier": "^4.1.0",
+    "eslint-plugin-import": "^2.16.0",
+    "eslint-plugin-jest": "^22.4.1",
+    "eslint-plugin-jsx-a11y": "^6.2.1",
+    "eslint-plugin-react": "^7.12.4",
     "fs": "0.0.2",
     "joi": "^14.3.1",
-    "mongoose": "^5.4.13",
+    "lint-staged": "^8.1.5",
+    "mongoose": "^5.4.20",
     "npm-run-all": "^4.1.5",
-    "restify": "^7.7.0",
+    "prettier": "^1.16.4",
+    "restify": "^8.2.0",
     "restify-cookies": "^0.2.5",
     "restify-joi-middleware": "^5.0.1",
-    "restify-jwt-community": "^1.0.9"
+    "restify-jwt-community": "^1.0.11"
   }
 }
