--- a/package.json
+++ b/package.json
@@ -5,10 +5,12 @@
   "description": "Users Frontender Magazine",
   "keywords": [],
   "author": "Anton Nemtsev <thesilentimp@gmail.com>",
-  "contributors": [{
-    "name": "Anton Nemtsev",
-    "email": "thesilentimp@gmail.com"
-  }],
+  "contributors": [
+    {
+      "name": "Anton Nemtsev",
+      "email": "thesilentimp@gmail.com"
+    }
+  ],
   "license": "CC-BY-4.0",
   "main": "server.js",
   "scripts": {
@@ -43,19 +45,19 @@
       "html"
     ]
   },
-  "dependencies": {
+  "devDependencies": {
     "@babel/cli": "^7.2.3",
-    "@babel/core": "^7.4.0",
+    "@babel/core": "^7.3.3",
+    "@babel/node": "^7.2.2",
     "@babel/plugin-proposal-export-namespace-from": "^7.2.0",
     "@babel/plugin-syntax-dynamic-import": "^7.2.0",
     "@babel/plugin-syntax-export-default-from": "^7.2.0",
-    "@babel/plugin-transform-runtime": "^7.4.0",
-    "@babel/preset-env": "^7.4.2",
-    "@babel/runtime": "^7.4.2",
-    "@plasma-platform/tm-message-hook": "^2.0.14",
+    "@babel/plugin-transform-runtime": "^7.2.0",
+    "@babel/preset-env": "^7.3.1",
+    "@babel/runtime": "^7.3.4",
+    "@plasma-platform/tm-message-hook": "^2.0.12",
     "babel-eslint": "^10.0.1",
     "documentation": "^9.3.1",
-    "dotenv": "^7.0.0",
     "eslint": "^5.16.0",
     "eslint-config-airbnb": "^17.1.0",
     "eslint-config-prettier": "^4.1.0",
@@ -63,12 +65,14 @@
     "eslint-plugin-jest": "^22.4.1",
     "eslint-plugin-jsx-a11y": "^6.2.1",
     "eslint-plugin-react": "^7.12.4",
-    "fs": "0.0.2",
-    "joi": "^14.3.1",
     "lint-staged": "^8.1.5",
-    "mongoose": "^5.4.20",
     "npm-run-all": "^4.1.5",
-    "prettier": "^1.16.4",
+    "prettier": "^1.16.4"
+  },
+  "dependencies": {
+    "dotenv": "^7.0.0",
+    "joi": "^14.3.1",
+    "mongoose": "^5.4.20",
     "restify": "^8.2.0",
     "restify-cookies": "^0.2.5",
     "restify-joi-middleware": "^5.0.1",
