--- a/package.json
+++ b/package.json
@@ -48,7 +48,6 @@
   "devDependencies": {
     "@babel/cli": "^7.2.3",
     "@babel/core": "^7.3.3",
-    "@babel/node": "^7.2.2",
     "@babel/plugin-proposal-export-namespace-from": "^7.2.0",
     "@babel/plugin-syntax-dynamic-import": "^7.2.0",
     "@babel/plugin-syntax-export-default-from": "^7.2.0",
@@ -70,6 +69,7 @@
     "prettier": "^1.16.4"
   },
   "dependencies": {
+    "@babel/runtime": "^7.3.4",
     "dotenv": "^7.0.0",
     "joi": "^14.3.1",
     "mongoose": "^5.4.20",
